feat: inverse user<->employee model dependency